<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:padding="32dp"
    tools:context=".ui.SplashActivity">

    <TextView
        android:id="@+id/textBegin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/lets_start"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textBegin"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:hint="@string/whats_is_your_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:backgroundTint="#1AFFFFFF"
        android:text="@string/save" />


</RelativeLayout>